--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>
       <a href="example/index.html">Ejemplo</a>
     </li>
+    <li>
+      <a href="example/index.html">EjemploJavier</a>
+    </li>
   </ul>
 </body>
 </html>
