--- a/juancotera/index.html
+++ b/juancotera/index.html
@@ -12,6 +12,26 @@
     <div class="wrapper">
       <div class="login">
         <h1>Sign in</h1>
+        <p>Stay updated on your professional world</p>
+        <form action="">
+          <label for="email">
+            <input type="email" placeholder="Email or Phone" required>
+          </label>
+          <label for="password">
+            <input type="password" placeholder="Password" required>
+          </label>
+          <a href="#">Forgot password</a>
+          <button type="submit">Sign in</button>
+        </form>
+        <p>or</p>
+        <div class="social">
+          <img src="./img/google.png" alt="Logo google">
+          <p>Sign in whit Google</p>
+        </div>
+        <div class="social">
+          <img src="./img/apple.png" alt="logo apple">
+          <p>Sign in whit Apple</p>
+        </div>
       </div>
     </div>
   </div>
