--- a/juancotera/index.html
+++ b/juancotera/index.html
@@ -20,10 +20,10 @@
           <label for="password">
             <input type="password" placeholder="Password" required>
           </label>
-          <a href="#">Forgot password</a>
+          <a href="#">Forgot password?</a>
           <button type="submit">Sign in</button>
         </form>
-        <p>or</p>
+        <p class="hr">or</p>
         <div class="social">
           <img src="./img/google.png" alt="Logo google">
           <p>Sign in whit Google</p>
