--- a/juancotera/index.html
+++ b/juancotera/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <div class="wrapper">
       <div class="login">
+        <a href="../index.html">Inicio</a>
         <h1>Sign in</h1>
         <p>Stay updated on your professional world</p>
         <form action="">
