se restablecio el link original

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <ul>
       <li>
-        <a href="./sefhirothxd/index.html">bryan Vera</a>
+        <a href="example/index.html">Ejemplo</a>
+        <a href="sefhirothxd/index.html">bryan Vera</a>
       </li>
     </ul>
   </body>
