--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Desafío 11</title>
 </head>
 <body>
-  <ul>
-    <li>
-      <a href="example/index.html">Ejemplo</a>
-    </li>
-  </ul>
+  <div class="box-btn">
+    <a class="btn" href="antonyure/index.html">Ir a login</a>
+    <a class="btn" href="example/index.html">Ejemplo</a>
+  </div>
 </body>
 </html>
