--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <ul>
     <li>
-      <a href="example/index.html">Ejemplo</a>
+      <a href="ellisvelandia/index.html">Ejemplo</a>
     </li>
   </ul>
 </body>
