correciones del formato y enlace

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li>
       <a href="example/index.html">Ejemplo</a>
+      <a href="antonionce/index.html">antonionce</a>
     </li>
   </ul>
 </body>
