--- a/isavalenzuela/index.html
+++ b/isavalenzuela/index.html
@@ -32,7 +32,9 @@
     <div>
       <ul>
         <li>
-          <a href="isavalenzuela/index.html">Link a mi página</a>
+          <a href="https://larnu-bootcamp.github.io/challenge_11/index.html"
+            >Volver al Inicio</a
+          >
         </li>
       </ul>
     </div>
