Create buttons containers

--- a/alvaroestebanherrera/index.html
+++ b/alvaroestebanherrera/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <div class="container">
-      <section class="form-sign-in">
-        <h1>Sign in</h1>
+    <section class="form-sign-in">
+      <h1>Sign in</h1>
         <div class="stay-updated">
           <p>Stay updated on your professional world</p>
         </div>
@@ -36,11 +36,27 @@
             or
           </p></span>
         </div>
-        <div class="google">
-          <input class="google-button" type="button" value="Sign in with Google">
+
+        <div class="button-box">
+          <a href="https://www.google.com">
+            <div class="button-container">
+              <img class="google-image" src="images/icon-google.png" alt="">
+              <h6 class="google-heading">
+                Sign in with Google
+              </h6>
+            </div>
+          </a>
         </div>
-        <div class="apple">
-          <input class="apple-button" type="button" value="Sign in with Apple">
+
+        <div class="button-box">
+          <a href="https://www.apple.com">
+            <div class="button-container">
+              <img class="apple-image" src="images/icon-apple.png" alt="">
+              <h6 class="apple-heading">
+                Sign in with Apple
+              </h6>
+            </div>
+          </a>
         </div>
       </section>
   </div>
