--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="../cesaraugusto316/index.html">Volver</a>
+      <a href="../index.html">Volver</a>
     </header>
   </body>
 </html>
