--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li>
         <a href="./juancotera/index.html">Juan Cotera</a>
       </li>
+      <li>
+        <a href="./cesaraugusto316/index.html">César Rivera M.</a>
+      </li>
     </ul>
   </body>
 </html>
