--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
   <ul>
     <li>
+      <a href="example/index.html">Ejemplo</a>
+    </li>
+    <li>
+      <a href="sefhirothxd/index.html">bryan Vera</a>
+    </li>
+    <li>
+      <a href="./juancotera/index.html">Juan Cotera</a>
+    </li>
+    <li>
       <a href="./alvaroestebanherrera/index.html">Alvaro Esteban</a>
     </li>
   </ul>
