--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="./juancotera/index.html">Juan Cotera</a>
       </li>
       <li>
-        <a href="./rvelascomosquera/index.html">Robert Velasco</a>
+        <a href="./rvelascomosquera/index.html">Robert Velasco M</a>
       </li>
     </ul>
   </body>
