--- a/Andres-Cuellar/index.html
+++ b/Andres-Cuellar/index.html
@@ -17,7 +17,7 @@
           <input type="text" placeholder="Email or Phone" required />
           <input type="password" placeholder="Password" required />
           <a href="#">Forgot password?</a>
-          <input type="button" class="login__btn" value="Sign in" />
+          <input type="button" class="login__form__btn" value="Sign in" />
         </form>
         <div class="login__divider">
           <hr />
