--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <a href="./juancotera/index.html">Juan Cotera</a>
       </li>
       <li>
+        <a href="isavalenzuela/index.html">Isa Valenzuela</a>
+      </li>
+      <li>
         <a href="./Andres-Cuellar/index.html">Andrés Cuéllar</a>
       </li>
     </ul>
