--- a/vizmarvizcaino/index.html
+++ b/vizmarvizcaino/index.html
@@ -16,7 +16,7 @@
                 <p>Sign in</p>
             </div>
             <div class="descripcion">
-                <p>Stay update on your professional world</p>
+                <p>Stay update on your professional world!</p>
             </div>
         </div>
         <div class="caja1">
