--- a/antonyure/index.html
+++ b/antonyure/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <a href="../index.html" class="btn-back"
-        ><i class="fa-solid fa-chevron-left"></i
-      ></a>
+      <a href="../index.html" class="btn-back">
+        <i class="fa-solid fa-chevron-left"></i>
+      </a>
 
       <form action="" class="wrapper__login">
         <div class="wrapper__login--text-container">
@@ -34,24 +34,22 @@
         />
         <span class="span span-show" onclick="showPassword()">Show</span>
         <span class="span">Forgot password?</span>
-        <button class="wrapper__login--send sign">Sign in</button>
+        <button class="wrapper__login--send sign">Sign in
+
+        </button>
         <div class="wrapper__login--bar">
           <hr />
           <span>or</span>
         </div>
-        <button class="wrapper__login--send"><img src="https://api.iconify.design/logos:google-icon.svg" alt=""></i>Sing in width Google</button>
-        <button class="wrapper__login--send"><i class="fa-brands fa-apple"></i>Sing in width Apple</button>
+        <button class="wrapper__login--send">
+          <img src="https://api.iconify.design/logos:google-icon.svg" alt="">
+          Sing in width Google
+        </button>
+        <button class="wrapper__login--send">
+          <i class="fa-brands fa-apple"></i>Sing in width Apple
+        </button>
       </form>
     </div>
   </body>
-  <script>
-    function showPassword() {
-      var x = document.getElementById("input-password");
-      if (x.type === "password") {
-        x.type = "text";
-      } else {
-        x.type = "password";
-      }
-    }
-  </script>
+  <script src="../js/main.js"></script>
 </html>
