--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Desafío 11</title>
-</head>
-<body>
-  <div class="box-btn">
-    <a class="btn" href="antonyure/index.html">Ir a login</a>
-    <a class="btn" href="example/index.html">Ejemplo</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Desafío 11</title>
+  </head>
+  <body>
+    <ul>
+      <li>
+        <a href="example/index.html">Ejemplo</a>
+      </li>
+      <li>
+        <a href="./antonyure/index.html">Antony Ureta</a>
+      </li>
+    </ul>
+  </body>
 </html>
