se elimino vscode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <a href="example/index.html">Ejemplo</a>
       </li>
       <li>
+        <a href="sefhirothxd/index.html">bryan Vera</a>
+      </li>
+      <li>
+        <a href="./juancotera/index.html">Juan Cotera</a>
+      </li>
+      <li>
+        <a href="isavalenzuela/index.html">Isa Valenzuela</a>
+      </li>
+      <li>
+        <a href="./Andres-Cuellar/index.html">Andrés Cuéllar</a>
+      </li>
+      <li>
         <a href="./antonyure/index.html">Antony Ureta</a>
       </li>
     </ul>
