--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-    <header>
-      <a href="../index.html">Volver</a>
-    </header>
+  <p>hola hola</p>
 </body>
 </html>
